--- a/.gitignore
+++ b/.gitignore
@@ -127,6 +127,8 @@ public/
 # Ignore all local history of files
 .history
 
+dist/
+
 
 
 # End of https://www.gitignore.io/api/node,macos,visualstudiocode
