--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,7 @@
     "declarationMap": true,
     "downlevelIteration": false,
     "outDir": "dist",
-    "sourceMap": true,
+    "sourceMap": false,
     "strict": true,
     "esModuleInterop": true,
     "skipLibCheck": true,
