--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,7 @@
     ],
     "declaration": true,
     "declarationDir": "dist",
-    "declarationMap": true,
+    "declarationMap": false,
     "downlevelIteration": false,
     "outDir": "dist",
     "sourceMap": false,
